<resources>
    <string name="app_name">Cabbie</string>
    <string name="hope_you_enjoy_rides">Hope you enjoy Rides!</string>
    <string name="cabbie">CABBIE</string>
    <string name="wherever_you_want">Wherever you want!</string>
    <string name="log_in">LOG IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_welcome">Map</string>
    <string name="book_a_ride">Book a ride</string>
    <string name="customer">Customer</string>
    <string name="driver">Driver</string>
    <string name="todo">TODO</string>
    <string name="title_activity_map_for_driver">Map</string>
    <string name="request_a_ride">Request a Ride</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="destination">Destination: --</string>
    <string name="horse">Horse</string>
    <string name="CabPlus">Jet</string>
    <string name="CabZplus">Helicopter</string>
    <string name="Cab">Faisal Movers</string>
    <string name="history">history</string>
    <string name="title_activity_history_single">Map</string>
</resources>
