<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dims"
    android:id="@+id/rootLayout"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cabbie"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="40sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wherever_you_want"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/appForRider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/hope_you_enjoy_rides"
        android:textAlignment="center"

        android:textColor="@color/bottomText"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/appForRider"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/signInButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="6dp"
            android:layout_weight="1"
            android:background="@drawable/sign_in_button_background"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@android:color/white"
            android:text="@string/log_in"
            android:layout_marginEnd="6dp" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_weight="1"
            android:background="@drawable/register_button_background"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@android:color/darker_gray"
            android:text="@string/sign_up"
            android:layout_marginStart="6dp" />

    </LinearLayout>

</RelativeLayout>