<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context="com.cabbie.hat.cabbie.MapForDriver">

    <fragment

        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@color/registerButton"
                android:id="@+id/logout"
                android:text="@string/logout"/>

            <Button
                android:layout_gravity="top|end"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@color/registerButton"
                android:id="@+id/settings"
                android:text="@string/settings"/>


        </LinearLayout>

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Working"
            android:layout_margin="10sp"
            android:id="@+id/workingSwitch"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/customerInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:elevation="1dp"
        android:translationZ="1dp"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/customerProfileImage"
                android:layout_width="100sp"
                android:layout_height="100sp"
                android:padding="20sp"
                android:src="@drawable/profile"
                android:contentDescription="TODO" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="40sp">

                <TextView
                    android:id="@+id/customerDestination"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10sp"
                    android:text="@string/destination"/>

                <TextView
                    android:id="@+id/customerName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="20sp"
                    android:paddingBottom="10sp" />

                <TextView
                    android:id="@+id/customerPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="20sp"
                    android:paddingBottom="10sp" />

            </LinearLayout>


        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Customer Picked"
            android:textColor="@color/colorPrimaryDark"
            android:background="@color/registerButton"
            android:id="@+id/rideStatus"/>

    </LinearLayout>

</FrameLayout>

